Update mirror handling
