# models/mirror.go
@@ -1,27 +1,25 @@
 package models
 
 import (
-	pb "../controllers/proto"
 	"github.com/jinzhu/gorm"
-	"time"
+	pb "github.com/mirrorhub-io/platform/controllers/proto"
 )
 
 type Mirror struct {
 	gorm.Model
 
 	ContactID int32
-	IPv4      string
-	IPv6      string
-	Domain    string
-	Location  string
+	IPv4      string `gorm:"not null;unique"`
+	IPv6      string `gorm:"unique"`
+	Domain    string `gorm:"not null;unique"`
 	Name      string
 
 	Traffic          int64
 	TrafficResetDay  int32
-	Bandwidth        int32
+	Bandwidth        int64
 	AvailableStorage int64
 
-	ClientToken string
+	ClientToken string `gorm:"not null;unique"`
 
 	Services []Service `gorm:"many2many:services_mirrors;"`
 }
@@ -36,6 +34,20 @@ func MirrorList(limit int, offset int) *MirrorCollection {
 	return &MirrorCollection{Mirrors: mirrors}
 }
 
+func MirrorFromProto(p *pb.Mirror) *Mirror {
+	return &Mirror{
+		Name:             p.Name,
+		IPv4:             p.Ipv4,
+		IPv6:             p.Ipv6,
+		Domain:           p.Domain,
+		ContactID:        p.ContactId,
+		Traffic:          p.Traffic,
+		AvailableStorage: p.AvailableStorage,
+		ClientToken:      p.ClientToken,
+		Bandwidth:        p.Bandwidth,
+	}
+}
+
 func (mc *MirrorCollection) ToProto() []*pb.Mirror {
 	mirrors := make([]*pb.Mirror, len(mc.Mirrors))
 	for i, mirror := range mc.Mirrors {
@@ -44,12 +56,26 @@ func (mc *MirrorCollection) ToProto() []*pb.Mirror {
 	return mirrors
 }
 
+func (m *Mirror) FetchServices() *ServiceCollection {
+	services := make([]*Service, 0)
+	Connection().Model(&m).Related(&services, "Services")
+	return &ServiceCollection{
+		Services: services,
+	}
+}
+
 func (m *Mirror) ToProto() *pb.Mirror {
 	return &pb.Mirror{
-		Name:        m.Name,
-		Ipv4:        m.IPv4,
-		Ipv6:        m.IPv6,
-		CreatedAt:   m.CreatedAt.Unix(),
-		OnlineSince: time.Now().Unix(),
+		Name:             m.Name,
+		Ipv4:             m.IPv4,
+		Ipv6:             m.IPv6,
+		Services:         m.FetchServices().ToProto(),
+		Domain:           m.Domain,
+		ContactId:        m.ContactID,
+		Traffic:          m.Traffic,
+		AvailableStorage: m.AvailableStorage,
+		ClientToken:      m.ClientToken,
+		Bandwidth:        m.Bandwidth,
+		CreatedAt:        m.CreatedAt.Unix(),
 	}
 }
